src/objects/Virtual_Meeting_Links__mdt.object
<CustomObject>
    <description>links for virtual meetings</description>
    <fields>
        <fullName>CME_Link__c</fullName>
        <inlineHelpText>Link user will be directed to when they clink on the CME Link button.</inlineHelpText>
        <label>CME Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Check_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if computer check link is active</description>
        <label>Check IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Computer_Check_Link__c</fullName>
        <label>Computer Check Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Confirmation_Text__c</fullName>
        <description>Event specific text that displays on registration confirmation screen.</description>
        <label>Confirmation Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_Link__c</fullName>
        <label>Donation Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_Ticket_Description__c</fullName>
        <label>Donation Ticket Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Id__c</fullName>
        <description>Registration email template id</description>
        <label>Email Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Id__c</fullName>
        <label>Event Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if view link is active to users</description>
        <label>Event IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exhibit_Open__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is meeting open with SSO</description>
        <label>Exhibit Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Free_Ticket_Description__c</fullName>
        <label>Free Ticket Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freeman_Event_Id__c</fullName>
        <label>Freeman Event Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Event_Id__c</fullName>
        <label>Live Event Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_Background_Image__c</fullName>
        <label>Login Background Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_Header_Image__c</fullName>
        <label>Login Header Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Content_Image__c</fullName>
        <label>My Content Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reg_Logo_Image__c</fullName>
        <label>Reg Logo Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Open__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registration Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>View_Link__c</fullName>
        <label>View Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>isCME__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the meeting CME eligible? If checked, the CME Link button will appear for this event.</inlineHelpText>
        <label>isCME</label>
        <type>Checkbox</type>
    </fields>
    <label>Virtual Meeting Links</label>
    <listViews>
        <fullName>Detail</fullName>
        <columns>MasterLabel</columns>
        <columns>Registration_Open__c</columns>
        <columns>Event_Id__c</columns>
        <columns>Live_Event_Id__c</columns>
        <columns>Freeman_Event_Id__c</columns>
        <columns>Event_IsActive__c</columns>
        <columns>View_Link__c</columns>
        <columns>Check_IsActive__c</columns>
        <columns>Computer_Check_Link__c</columns>
        <columns>CME_Link__c</columns>
        <filterScope>Everything</filterScope>
        <label>Detail</label>
    </listViews>
    <pluralLabel>Virtual Meetings Links</pluralLabel>
</CustomObject>